# rlvgl

./: .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  NOTICES.md  README-CREATOR.md  README.md  build.rs  deny.toml  memory_STM32H747XI.x  pyproject.toml  requirements.txt  stm32_af.json
api/: Cargo.toml
api/src/: lib.rs
chipdb/rlvgl-chips-stm/: Cargo.toml  LICENSE  README.md  build.rs
chipdb/rlvgl-chips-stm/assets/: .gitignore  README.md
chipdb/rlvgl-chips-stm/db/: loader.bin.zst
chipdb/rlvgl-chips-stm/src/: lib.rs
chipdb/rlvgl-chips-stm/tests/: env_wiring.rs
chips/stm/bsps/: Cargo.toml  README.md
chips/stm/bsps/src/: f407_demo.rs  f429_demo.rs  lib.rs  stm32f4discovery.rs
chips/stm/bsps/src/b_g473e_zest1s/hal/: mod.rs  spi1.rs  usart1.rs
chips/stm/bsps/src/b_g473e_zest1s/pac/: spi1.rs  usart1.rs
chips/stm/bsps/src/b_g474e_dpow1/hal/: usart3.rs
chips/stm/bsps/src/b_g474e_dpow1/pac/: usart3.rs
chips/stm/bsps/src/b_l072z_lrwan1/hal/: spi1.rs  usart2.rs
chips/stm/bsps/src/b_l072z_lrwan1/pac/: spi1.rs  usart2.rs
chips/stm/bsps/src/b_l462e_cell1/hal/: i2c1.rs  mod.rs  spi3.rs  usart2.rs  usart3.rs
chips/stm/bsps/src/b_l462e_cell1/pac/: i2c1.rs  spi1.rs  spi3.rs  usart1.rs  usart2.rs  usart3.rs
chips/stm/bsps/src/b_l475e_iot01a1/hal/: i2c2.rs  spi1.rs  spi3.rs  uart4.rs  usart1.rs
chips/stm/bsps/src/b_l475e_iot01a1/pac/: i2c1.rs  i2c2.rs  mod.rs  spi2.rs  usart1.rs  usart3.rs
chips/stm/bsps/src/b_l475e_iot01a2/hal/: spi2.rs
chips/stm/bsps/src/b_l475e_iot01a2/pac/: spi1.rs  spi3.rs  uart4.rs  usart2.rs
chips/stm/bsps/src/b_l4s5i_iot01a/pac/: i2c1.rs  i2c2.rs  mod.rs  spi1.rs  spi3.rs  uart4.rs  usart1.rs
chips/stm/bsps/src/b_u585i_iot02a/hal/: i2c1.rs  i2c2.rs  spi2.rs  uart4.rs  usart1.rs
chips/stm/bsps/src/b_u585i_iot02a/pac/: i2c1.rs  i2c2.rs  mod.rs  spi2.rs  uart4.rs  usart1.rs
chips/stm/bsps/src/b_wb1m_wpan1/hal/: spi1.rs  usart1.rs
chips/stm/bsps/src/b_wb1m_wpan1/pac/: i2c1.rs  spi1.rs  usart1.rs
chips/stm/bsps/src/b_wba5m_wpan/hal/: i2c3.rs
chips/stm/bsps/src/b_wba5m_wpan/pac/: i2c3.rs  mod.rs  usart1.rs
chips/stm/bsps/src/b_wba6m_wpan/hal/: i2c1.rs  i2c3.rs  spi3.rs
chips/stm/bsps/src/b_wba6m_wpan/pac/: i2c1.rs  i2c3.rs  mod.rs  spi3.rs  usart1.rs  usart2.rs
chips/stm/bsps/src/b_wl5m_subg1/hal/: i2c2.rs  spi2.rs  usart2.rs
chips/stm/bsps/src/b_wl5m_subg1/pac/: i2c2.rs  mod.rs  spi2.rs  usart2.rs
chips/stm/bsps/src/nucleo_c031c6/hal/: i2c1.rs  mod.rs  usart1.rs  usart2.rs
chips/stm/bsps/src/nucleo_c031c6/pac/: i2c1.rs  usart1.rs  usart2.rs
chips/stm/bsps/src/nucleo_c051c8/pac/: i2c1.rs  usart2.rs
chips/stm/bsps/src/nucleo_c071rb/pac/: i2c1.rs  usart2.rs
chips/stm/bsps/src/nucleo_c092rc/pac/: i2c1.rs  usart2.rs
chips/stm/bsps/src/nucleo_f030r8/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f031k6/hal/: usart1.rs
chips/stm/bsps/src/nucleo_f031k6/pac/: mod.rs  usart1.rs
chips/stm/bsps/src/nucleo_f042k6/hal/: usart2.rs
chips/stm/bsps/src/nucleo_f042k6/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f070rb/hal/: usart2.rs
chips/stm/bsps/src/nucleo_f070rb/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f072rb/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f091rc/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f103rb/hal/: usart2.rs
chips/stm/bsps/src/nucleo_f103rb/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f207zg/hal/: usart3.rs
chips/stm/bsps/src/nucleo_f207zg/pac/: usart3.rs
chips/stm/bsps/src/nucleo_f302r8/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f303k8/hal/: usart2.rs
chips/stm/bsps/src/nucleo_f303k8/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f303ze/hal/: usart3.rs
chips/stm/bsps/src/nucleo_f303ze/pac/: usart3.rs
chips/stm/bsps/src/nucleo_f334r8/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f401re/pac/: mod.rs  usart2.rs
chips/stm/bsps/src/nucleo_f410rb/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f411re2/pac/: usart2.rs
chips/stm/bsps/src/nucleo_f412zg/pac/: usart3.rs
chips/stm/bsps/src/nucleo_f413zh/pac/: usart3.rs
chips/stm/bsps/src/nucleo_f429zi/hal/: usart3.rs
chips/stm/bsps/src/nucleo_f429zi/pac/: usart3.rs
chips/stm/bsps/src/nucleo_f439zi/pac/: usart3.rs
chips/stm/bsps/src/nucleo_f446re/hal/: usart2.rs
chips/stm/bsps/src/stm320518_eval/: mod.rs
core/: Cargo.toml  README.md
core/src/: animation.rs  event.rs  fs.rs  lib.rs  renderer.rs  style.rs  theme.rs  widget.rs
core/src/plugins/: apng.rs  canvas.rs  dash_lottie.rs  dash_lottie_render.rs  fatfs.rs  fontdue.rs  gif.rs  jpeg.rs  lottie.rs  mod.rs  nes.rs  pinyin.rs  png.rs  qrcode.rs
core/tests/: animation.rs  style_builder.rs  theme.rs  widget_node.rs
examples/sim/: Cargo.toml  README.md  main.rs
examples/sim/src/: lib.rs  main.rs
examples/sim/tests/: demo.rs  text.rs
fs-sim/: Cargo.toml
fs-sim/src/: lib.rs
micropython/: Cargo.toml  micropython.mk  mp_module.c
micropython/src/: lib.rs
platform/: Cargo.toml  README-VENDOR.md  README.md
platform/examples/: leak.rs
platform/src/: blit.rs  cpu_blitter.rs  display.rs  dma2d.rs  ft5336.rs  input.rs  lib.rs  otm8009a.rs  pixels_renderer.rs  sd_fatfs_adapter.rs  simulator.rs  st7789.rs  stm32h747i_disco.rs  stm32h747i_disco_sd.rs  wgpu_blitter.rs
platform/tests/: input_device.rs  leak_detection.rs  simulator_window.rs  size_regression.rs
ui/: Cargo.toml  README.md
ui/examples/: demo.rs
ui/src/: alert.rs  badge.rs  button.rs  checkbox.rs  drawer.rs  event.rs  icon.rs  input.rs  layout.rs  lib.rs  modal.rs  radio.rs  style.rs  switch.rs  tag.rs  text.rs  theme.rs  toast.rs  view.rs
widgets/: Cargo.toml  README.md
widgets/src/: button.rs  checkbox.rs  container.rs  image.rs  label.rs  lib.rs  list.rs  progress.rs  radio.rs  slider.rs  switch.rs
widgets/tests/: button_event.rs  checkbox_event.rs  event_fuzz.rs  golden_button.rs  golden_checkbox.rs  golden_container.rs  golden_image.rs  golden_label.rs  golden_list.rs  golden_progress.rs  golden_slider.rs  layout_stress.rs  list_draw_selected.rs  list_event.rs  progress_edge.rs  radio_event.rs  slider_event.rs  slider_zero_range.rs  switch_event.rs
(+984 files in other folders)
