[package]
name = "rlvgl"
version = "0.1.6"
authors = ["Ira Abbott <ira@softobotos.com>"]
edition = "2024"
license = "MIT"
description = "A modular, idiomatic Rust reimplementation of the LVGL graphics library for embedded and simulator use."
readme = "README.md"
repository = "https://github.com/softoboros/rlvgl"
homepage = "https://github.com/softoboros/rlvgl"
documentation = "https://docs.rs/rlvgl"
keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
categories = ["embedded", "gui", "no-std", "graphics"]
publish = true
exclude = [
  "lvgl/**",
  "docs/**",
  ".github/**",
  "scripts/**",
  "target/**",
  "assets/**",
  ".vscode/**",
  "codex/**"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rlvgl-sim"
path = "examples/sim/src/main.rs"
required-features = ["simulator", "qrcode", "png", "jpeg", "fontdue"]

[[bin]]
name = "rlvgl-stm32h747i-disco"
path = "examples/stm32h747i-disco/src/main.rs"
required-features = ["stm32h747i_disco"]

[dependencies]
rlvgl-core = { version = "0.1.5", path = "core", default-features = false }
rlvgl-widgets = { version = "0.1.4", path = "widgets", default-features = false }
rlvgl-platform = { version = "0.1.4", path = "platform", default-features = false }
rlvgl-ui = { version = "0.1.0", path = "ui", default-features = false }

[dependencies.gif]
version = "0.13.3"
optional = true
[dependencies.fontdue]
version = "0.9.3"
optional = true
[dependencies.rlottie]
version = "0.5.2"
optional = true
[dependencies.embedded-canvas]
version = "0.3.1"
optional = true
[dependencies.embedded-graphics]
version = "0.8"
optional = true
[dependencies.fatfs]
version = "0.3"
optional = true
[dependencies.fscommon]
version = "0.1"
optional = true
[dependencies.yane]
version = "1"
default-features = false
optional = true
[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]
optional = true

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]
optional = true

[dependencies.panic-halt]
version = "1.0.0"
optional = true

[dependencies.embedded-alloc]
version = "=0.5.1"
optional = true

[dependencies.critical-section]
version = "1.1.2"
optional = true

[features]
default = []
png = ["rlvgl-core/png"]
jpeg = ["rlvgl-core/jpeg"]
gif = ["rlvgl-core/gif", "dep:gif"]
qrcode = ["rlvgl-core/qrcode"]
simulator = ["rlvgl-platform/simulator"]
st7789 = ["rlvgl-platform/st7789"]
stm32h747i_disco = [
    "rlvgl-platform/stm32h747i_disco",
    "dep:cortex-m-rt",
    "dep:cortex-m",
    "dep:panic-halt",
    "dep:embedded-alloc",
]
fontdue = ["rlvgl-core/fontdue", "rlvgl-platform/fontdue", "dep:fontdue"]
lottie = ["rlvgl-core/lottie", "dep:rlottie"]
canvas = ["rlvgl-core/canvas", "dep:embedded-canvas", "dep:embedded-graphics"]
pinyin = ["rlvgl-core/pinyin"]
fatfs = ["rlvgl-core/fatfs", "dep:fatfs", "dep:fscommon"]
nes = ["rlvgl-core/nes", "dep:yane"]
apng = ["rlvgl-core/apng", "dep:image"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = true
incremental = false

[profile.dev]
opt-level = 1
debug = true
incremental = false

[workspace]
members = ["core", "platform", "widgets", "ui"]
resolver = "2"
