[package]
name = "rlvgl-core"
version = "0.1.0"
authors = ["Ira Abbott <ira@softobotos.com>"]
edition = "2024"
license = "MIT"
description = "A modular, idiomatic Rust reimplementation of the LVGL graphics library for embedded and simulator use."
readme = "README.md"
repository = "https://github.com/softoboros/rlvgl"
homepage = "https://github.com/softoboros/rlvgl"
documentation = "https://docs.rs/rlvgl"
keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
categories = ["embedded", "gui", "no-std", "graphics"]
publish = true

[dependencies]

png = { version = "0.18.0-rc.3", optional = true }
jpeg-decoder = { version = "0.3", optional = true }
qrcode = { version = "0.14", default-features = false, optional = true }

[features]
default = []
png = ["dep:png"]
jpeg = ["dep:jpeg-decoder"]
qrcode = ["dep:qrcode"]

[dev-dependencies]
rlvgl-widgets = { path = "../widgets" }
doc-comment = "0.3"
base64 = "0.22"
