[package]
name = "rlvgl-core"
version = "0.1.4"
authors = ["Ira Abbott <ira@softobotos.com>"]
edition = "2024"
license = "MIT"
description = "A modular, idiomatic Rust reimplementation of the LVGL graphics library for embedded and simulator use."
readme = "README.md"
repository = "https://github.com/softoboros/rlvgl"
homepage = "https://github.com/softoboros/rlvgl"
documentation = "https://docs.rs/rlvgl"
keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
categories = ["embedded", "gui", "no-std", "graphics"]
publish = true

[dependencies]

png = { version = "0.18.0-rc.3", optional = true }
jpeg-decoder = { version = "0.3", optional = true }
qrcode = { version = "0.14", default-features = false, optional = true }
gif = { version = "0.13", optional = true }
fontdue = { version = "0.9.3", default-features = false, optional = true }
rlottie = { version = "0.5.2", optional = true }
embedded-canvas = { version = "0.3.1", default-features = true, optional = true }
embedded-graphics = { version = "0.8", optional = true }
fatfs = { version = "0.3", optional = true }
fscommon = { version = "0.1", optional = true }
yane = { version = "1", default-features = false, optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
once_cell = {version = "1.19", optional = true }
blake3 = {version = "1.5", optional = true }
[features]
default = []
png = ["dep:png"]
jpeg = ["dep:jpeg-decoder"]
gif = ["dep:gif"]
qrcode = ["dep:qrcode"]
fontdue = ["dep:fontdue", "dep:once_cell", "dep:blake3"]
lottie = ["dep:rlottie"]
canvas = ["dep:embedded-canvas", "dep:embedded-graphics"]
pinyin = []
fatfs = ["dep:fatfs", "dep:fscommon"]
nes = ["dep:yane"]
apng = ["dep:image"]

[dev-dependencies]
rlvgl-widgets = { path = "../widgets" }
doc-comment = "0.3"
base64 = "0.22"
apng = "0.3"
png = "0.18.0-rc.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "nightly"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(nightly)"] }

