[package]
name = "rlvgl-platform"
version = "0.1.3"
authors = ["Ira Abbott <ira@softobotos.com>"]
edition = "2024"
license = "MIT"
description = "A modular, idiomatic Rust reimplementation of the LVGL graphics library for embedded and simulator use."
readme = "README.md"
repository = "https://github.com/softoboros/rlvgl"
homepage = "https://github.com/softoboros/rlvgl"
documentation = "https://docs.rs/rlvgl"
keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
categories = ["embedded", "gui", "no-std", "graphics"]
publish = true

[dependencies]
rlvgl-core = { version = "0.1.0", path = "../core", default-features = false }
embedded-hal = { version = "1.0", optional = true }
display-interface = { version = "0.5", optional = true }
display-interface-spi = { version = "0.5", optional = true }
pixels = { version = "0.15", optional = true }
winit = { version = "0.30.12", optional = true }
eframe = { version = "0.27", default-features = false, features = ["glow"], optional = true }
embedded-graphics = { version = "0.8", optional = true }

[features]
default = []
simulator = ["pixels", "winit", "embedded-graphics", "eframe"]
st7789 = ["embedded-hal", "display-interface", "display-interface-spi"]
fontdue = ["rlvgl-core/fontdue"]
