# SPDX-License-Identifier: MIT OR Apache-2.0
# rlvgl-ui crate manifest.

[package]
name = "rlvgl-ui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-level UI components and theming for rlvgl."

[dependencies]
rlvgl-core = { path = "../core", version = "0.1.4" }
rlvgl-widgets = { path = "../widgets", version = "0.1.3" }

[features]
view = []

[workspace]
