# SPDX-License-Identifier: MIT
# rlvgl-ui crate manifest.

[package]
name = "rlvgl-ui"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "High-level UI components and theming for rlvgl."

[dependencies]
rlvgl-core = { path = "../core", version = "0.1.4" }
rlvgl-widgets = { path = "../widgets", version = "0.1.3" }

[features]
view = []
