# SPDX-License-Identifier: BSD-3-Clause
# rlvgl-stm-bsps crate manifest.

[package]
name = "rlvgl-bsps-stm"
version = "0.1.0"
authors = ["Ira Abbott <ira@softoboros.com>"]
edition = "2024"
license = "BSD-3-Clause"
description = "BSP files for STM32 Demo, Nucleo, and Discovery boards per vendor .ioc files."
readme = "README.md"
repository = "https://github.com/softoboros/rlvgl"
homepage = "https://github.com/softoboros/rlvgl"
documentation = "https://docs.rs/rlvgl-bsps-stm"
keywords = ["embedded", "graphics", "ui", "lvgl", "no_std"]
categories = ["embedded", "gui", "no-std", "graphics"]
publish = true

[lib]
path = "src/lib.rs"

[features]
default = [
    "hal",
    "split",
]
hal = []
pac = []
split = []
flat = []
summaries = []
pinreport = []
stm32-c0 = []
stm32-f0 = []
stm32-f3 = []
stm32-f4 = []
stm32-f7 = []
stm32-g0 = []
stm32-g4 = []
stm32-h5 = []
stm32-h7 = []
stm32-l0 = []
stm32-l1 = []
stm32-l4 = []
stm32-l5 = []
stm32-n6 = []
stm32-u0 = []
stm32-u5 = []
